--- a/index.html
+++ b/index.html
@@ -12,7 +12,18 @@
     <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@200..800&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Unlock&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+
+    <!-- Google tag (gtag.js) -->
+    <script defer async src="https://www.googletagmanager.com/gtag/js?id=G-LKH6CHZ6B7"></script>
+    <script defer>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-LKH6CHZ6B7');
+    </script>
 </head>
+
 <body>
     <header>
         <img src="./img/logo_whiteUNNE.png" style="position: absolute; width: 120px; right: 0; margin: 15px;">
