--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 
     <!-- Google tag (gtag.js) -->
-    <script defer async src="https://www.googletagmanager.com/gtag/js?id=G-LKH6CHZ6B7"></script>
-    <script defer>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-LKH6CHZ6B7"></script>
+    <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
