--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
 
 <body>
     <header>
-        <img src="./img/logo_whiteUNNE.png" style="position: absolute; width: 120px; right: 0; margin: 15px;">
+        <img class="unne_logo" src="./img/logo_whiteUNNE.png">
         <h1>
             LICENCIATURA EN SISTEMAS 
-            <p style="color:chartreuse; display: inline; font-size: 18px; font-weight: 600;">Beta 1.0</p>
+            <p class="beta">Beta 1.0</p>
         </h1>
         <h2>Correlativas</h2>
         <h3>Selecciona tus materias y Actualiza su estado</h3>
