--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" type="text/css" href="./css/styles.css">
     <link rel="shortcut icon" href="./img/page_icon.png" />
     <script defer src="./js/Subject.js"></script>
+    <script defer src="./js/Extracurricular.js"></script>
+    <script defer src="./js/FinalProject.js"></script>
     <script defer src="./js/onload.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@200..800&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Unlock&display=swap" rel="stylesheet">
