--- a/index.html
+++ b/index.html
@@ -6,11 +6,14 @@
     <title>LSI Correlativas</title>
     <link rel="stylesheet" type="text/css" href="./css/reset.css">
     <link rel="stylesheet" type="text/css" href="./css/styles.css">
-    <link rel="shortcut icon" href="./img/page_icon.png" />
+    <link rel="shortcut icon" href="./img/padlock_open.png" />
+
+    <!-- Scripts -->
     <script defer src="./js/Subject.js"></script>
     <script defer src="./js/Extracurricular.js"></script>
-    <script defer src="./js/FinalProject.js"></script>
     <script defer src="./js/onload.js"></script>
+
+    <!-- Estilos CSS -->
     <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@200..800&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Unlock&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
@@ -27,15 +30,21 @@
 </head>
 
 <body>
+
     <header>
+
         <img class="unne_logo" src="./img/logo_whiteUNNE.png">
         <h1>
             LICENCIATURA EN SISTEMAS 
             <p class="beta">Beta 1.0</p>
         </h1>
+
         <h2>Correlativas</h2>
+
         <h3>Selecciona tus materias y Actualiza su estado</h3>
+        
     </header>
+
     <main>
 
         <div class="year_column">
