--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <img class="unne_logo" src="./img/logo_whiteUNNE.png">
         <h1>
             LICENCIATURA EN SISTEMAS 
-            <p class="beta">Beta 1.0</p>
+            <p class="beta">Beta 1.1</p>
         </h1>
 
         <h2>Correlativas</h2>
@@ -227,6 +227,18 @@
         </div>
 
     </main>
+
+    <div class="container_bar_progress">
+        <p class="bar_tittle">Analista Programador/a</p>
+        <img class="degree_img" src="./img/degree.png">
+        <progress id="analista_degree" max="36" value="0"></progress>
+        <p id="analista_degree_text" class="degree_text" >0.0 %</p>
+        <p class="bar_tittle">Licenciado/a en Sistemas de Información</p>
+        <img class="degree_img" style="filter: hue-rotate(190deg)" src="./img/degree.png">
+        <progress id="licenciado_degree" max="58" value="0"></progress>
+        <p id="licenciado_degree_text" class="degree_text" >0.0 %</p>
+    </div>
+
     <footer>
         © 2024 Todos los derechos reservados - Diego N. Cabrera
     </footer>
