--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
         <img class="degree_img" src="./img/degree.png">
         <progress id="analista_degree" max="36" value="0"></progress>
         <p id="analista_degree_text" class="degree_text" >0.0 %</p>
-        <p class="bar_tittle">Licenciado/a en Sistemas de Información</p>
+        <p class="bar_tittle">Licenciado/a en Sistemas</p>
         <img class="degree_img" style="filter: hue-rotate(190deg)" src="./img/degree.png">
         <progress id="licenciado_degree" max="58" value="0"></progress>
         <p id="licenciado_degree_text" class="degree_text" >0.0 %</p>
