--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>LSI Correlativas</title>
     <link rel="stylesheet" type="text/css" href="./css/reset.css">
     <link rel="stylesheet" type="text/css" href="./css/styles.css">
-    <link rel="shortcut icon" href="./img/padlock_open.png" />
+    <link rel="shortcut icon" href="./img/degree.png" />
 
     <!-- Scripts -->
     <script defer src="./js/Subject.js"></script>
