--- a/index.html
+++ b/index.html
@@ -3,6 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <meta property="og:title" content="LSI Correlativas" />
+    <meta property="og:description" content="Actualiza tu estado en la carrera y observa las materias disponibles" />
+    <meta property="og:url" content="https://1hagi.github.io/correlativas_lsi/" />
+    <meta property="og:image" content="https://ibb.co/smhwWp4" />
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="Lic. en Sistemas - Correlativas" />
+
     <title>LSI Correlativas</title>
     <link rel="stylesheet" type="text/css" href="./css/reset.css">
     <link rel="stylesheet" type="text/css" href="./css/styles.css">
