--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
     <meta property="og:title" content="LSI Correlativas" />
     <meta property="og:description" content="Actualiza tu estado en la carrera y observa las materias disponibles" />
-    <meta property="og:url" content="https://1hagi.github.io/correlativas_lsi/" />
+    <meta property="og:url" content="https://i.ibb.co/Ss2nfDg/correlativas-lsi-banner.png" />
     <meta property="og:image" content="https://ibb.co/smhwWp4" />
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="Lic. en Sistemas - Correlativas" />
