--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
 
     <meta property="og:title" content="LSI Correlativas" />
     <meta property="og:description" content="Actualiza tu estado en la carrera y observa las materias disponibles" />
-    <meta property="og:url" content="https://i.ibb.co/Ss2nfDg/correlativas-lsi-banner.png" />
+    <meta property="og:url" content="https://i.ibb.co/8b6rfj0/correlativas-lsi-banner.png" />
     <meta property="og:image" content="https://ibb.co/smhwWp4" />
+    <meta property="og:image:width" content="600" />
+    <meta property="og:image:height" content="600" />
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="Lic. en Sistemas - Correlativas" />
 
