--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <meta property="og:title" content="LSI Correlativas" />
-    <meta property="og:description" content="Actualiza tu estado en la carrera y observa las materias disponibles" />
+    <!-- Tags para Open Graph -->
+    <meta property="og:title" content="Lic. Sistemas de Información" />
+    <meta property="og:description" content="Ver qué materias puedo cursar fácilmente!" />
     <meta property="og:url" content="https://1hagi.github.io/correlativas_lsi/" />
-    <meta property="og:image" content="https://i.ibb.co/8b6rfj0/correlativas-lsi-banner.png" />
+    <meta property="og:image" content="https://i.ibb.co/tbjM4pS/correlativas-lsi-banner.png" />
     <meta property="og:image:width" content="600" />
     <meta property="og:image:height" content="600" />
     <meta property="og:type" content="website" />
