--- a/index.html
+++ b/index.html
@@ -44,15 +44,17 @@
 
     <header>
 
-        <img class="unne_logo" src="./img/logo_whiteUNNE.png">
+        <tittle class="spring-eff"></tittle>
+
+        <img class="unne_logo" src="./img/logo_whiteUNNE.png"/>
         <h1>
             LICENCIATURA EN SISTEMAS 
-            <p class="beta">Beta 1.3</p>
+            <p class="beta">(v1.4)</p>
         </h1>
 
         <h2>Correlativas</h2>
 
-        <h3>Selecciona tus materias y Actualiza su estado</h3>
+        <h3>Selecciona materias y actualiza ( Basado en el Plan de Estudio )</h3>
         
     </header>
 
