--- a/index.html
+++ b/index.html
@@ -253,7 +253,10 @@
     </div>
 
     <footer>
-        © 2024 Todos los derechos reservados - Diego N. Cabrera
+        <p>© 2024 Todos los derechos reservados - Diego N. Cabrera</p>
+        <a style="margin-left: 5px;" href="https://github.com/1Hagi/correlativas_lsi" target="_blank">
+            <img class="github_img" src="./img/github.png" alt="Github">
+          </a>
     </footer>
 </body>
 </html>
