--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
     <header>
 
-        <tittle class="festival-eff"></tittle>
+        <tittle class="summer-eff"></tittle>
 
         <img class="unne_logo" src="./img/logo_whiteUNNE.png"/>
         <h1>
