--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@200..800&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Unlock&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Tilt+Warp:wght@400;700&display=swap" rel="stylesheet">
 
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-LKH6CHZ6B7"></script>
@@ -46,10 +47,12 @@
 
         <tittle class="summer-eff"></tittle>
 
-        <img class="unne_logo" src="./img/logo_whiteUNNE.png"/>
+        <button id="themeButton" class="toggle-btn" onclick="toggleTheme()"></button>
+
+        <div class="unne_logo"></div>
         <h1>
             LICENCIATURA EN SISTEMAS 
-            <p class="beta">(v1.5)</p>
+            <p class="version" style="text-shadow: var(--title-shadow);">(v1.6)</p>
         </h1>
 
         <h2>Correlativas</h2>
