--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
 
     <header>
 
-        <tittle class="summer-eff"></tittle>
-
+        <!-- <div class="summer-eff"></div> -->
+ 
         <button id="themeButton" class="toggle-btn" onclick="toggleTheme()"></button>
 
         <div class="unne_logo"></div>
