--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <title>LSI Correlativas</title>
     <link rel="stylesheet" type="text/css" href="./css/reset.css">
     <link rel="stylesheet" type="text/css" href="./css/styles.css">
-    <link rel="shortcut icon" href="./img/degree.png" />
+    <link rel="shortcut icon" href="./img/favicon_degree.png" />
 
     <!-- Scripts -->
     <script defer src="./js/Subject.js"></script>
@@ -246,11 +246,11 @@
 
     <div class="container_bar_progress">
         <p class="bar_tittle">Analista Programador/a</p>
-        <img class="degree_img" src="./img/degree.png">
+        <img class="degree_img" src="./img/degree.png" alt="analista_degree">
         <progress id="analista_degree" max="36" value="0"></progress>
         <p id="analista_degree_text" class="degree_text" >0.0 %</p>
         <p class="bar_tittle">Licenciado/a en Sistemas</p>
-        <img class="degree_img" style="filter: hue-rotate(190deg)" src="./img/degree.png">
+        <img class="degree_img" style="filter: hue-rotate(190deg)" src="./img/degree.png" alt="licenciado_degree">
         <progress id="licenciado_degree" max="58" value="0"></progress>
         <p id="licenciado_degree_text" class="degree_text" >0.0 %</p>
     </div>
