--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 
     gtag('config', 'G-LKH6CHZ6B7');
     </script>
+    <script data-goatcounter="https://dncabrera01.goatcounter.com/count" async src="//gc.zgo.at/count.js"></script>
 </head>
 
 <body>
