--- a/index.html
+++ b/index.html
@@ -43,12 +43,41 @@
 </head>
 
 <body>
+    <!-- Información del creador y colaboradores en desarrollo
+    <div style="position: absolute; width: 500px; height: 100%; background-color: rgb(16, 18, 20); z-index: 1; border-right: solid 1px rgba(255, 255, 255, 0.2);">
+        <div style="padding: 20px; border-bottom: dashed 1px rgba(255, 255, 255, 0.2);">
+            <p style="padding: 20px;"> Creador de la WEBAPP </p>
+            <div style="position: relative; display: flex; align-items: center; left: 90px;">
+                <img src="./img/foto_perfil.jpg" style="width: 150px; border-radius: 25px; box-shadow: 0 0 10px rgba(117, 117, 117, 0.5);" alt="imagen_perfil">
+                <div style="margin-left: 25px;">
+                    <p style="font-size: 25px; margin: 0; padding-bottom: 10px;">Diego N. Cabrera</p>
+                    <p style="font-size: 16px; margin: 0;">Desarrollador Web</p>
+                </div>
+            </div>
+        </div>
+        <div>
+            Colaboradores:
+            <div style="display: flex; flex-wrap: wrap; gap: 8px; margin-top: 10px; margin-left: 20px; line-height: 1.6;">
+                <div style="border: dashed 1px rgba(255, 255, 255, 0.2); width: 50px; height: 50px;"></div>
+                <div style="border: dashed 1px rgba(255, 255, 255, 0.2); width: 50px; height: 50px;"></div>
+                <div style="border: dashed 1px rgba(255, 255, 255, 0.2); width: 50px; height: 50px;"></div>
+                <div style="border: dashed 1px rgba(255, 255, 255, 0.2); width: 50px; height: 50px;"></div>
+                <div style="border: dashed 1px rgba(255, 255, 255, 0.2); width: 50px; height: 50px;"></div>
+                <div style="border: dashed 1px rgba(255, 255, 255, 0.2); width: 50px; height: 50px;"></div>
+            </div>
+        </div>
+        <div>
+            <p>Objetivo:</p>
+            <p>El objetivo de esta webapp es facilitar a los estudiantes la consulta de las materias correlativas mediante uncon un diseño intuitivo y accesible.</p>
+        </div>
+    </div>
+    --> 
 
     <header>
 
-        <div class="autumn-eff"></div>
+        <div class="spring-eff-2"></div>
  
-        <button id="themeButton" class="toggle-btn" onclick="volver()"></button>
+        <button id="themeButton" class="toggle-btn" onclick="toggleTheme()"></button>
         
         <div class="unne_logo"></div>
         <h1>
