--- a/plan_estudio_nuevo.html
+++ b/plan_estudio_nuevo.html
@@ -48,7 +48,7 @@
 
     <header>
 
-        <div class="autumn-eff"></div>
+        <div class="spring-eff-2"></div>
 
         <button class="volver-btn" onclick="volver()">
             <img src="./img/backarrow2.png" style="width: 100%; opacity: 0.6;"/>
