--- a/index.html
+++ b/index.html
@@ -112,7 +112,17 @@
 
     <header>
 
-        <div class="spring-eff-2"></div>
+        <!-- !Efecto anterior de primavera
+            <div class="spring-eff-2"></div>
+        -->
+
+        <!-- Nuevo efecto de estrellas -->
+
+        <div id="bg-stars">
+            <div id='stars'></div>
+            <div id='stars2'></div>
+            <div id='stars3'></div>
+        </div>
 
         <div style="position: absolute; display: flex; flex-wrap: wrap; align-items: center; gap: 5px; top: 10px; left: 10px; width: 100px;">
             <div class="show-info" onclick="showInfo()">☰</div>
@@ -122,7 +132,7 @@
         <div class="unne_logo"></div>
         <h1>
             Correlativas LSI
-            <p class="version" style="text-shadow: var(--title-shadow);">(v1.8)</p>
+            <p class="version" style="text-shadow: var(--title-shadow);">(v1.9)</p>
         </h1>
 
         <h2>Selecciona Plan de Estudios</h2>
