--- a/index.html
+++ b/index.html
@@ -124,20 +124,20 @@
             <div id='stars3'></div>
         </div>
 
-        <div style="position: absolute; display: flex; flex-wrap: wrap; align-items: center; gap: 5px; top: 10px; left: 10px; width: 100px;">
+        <div style="position: absolute; display: flex; flex-wrap: wrap; align-items: center; gap: 5px; top: 10px; left: 10px; width: 100px; z-index: 1;">
             <div class="show-info" onclick="showInfo()">☰</div>
             <div id="themeButton" class="toggle-btn" onclick="toggleTheme()"></div>
         </div>
         
         <div class="unne_logo"></div>
-        <h1>
+        <h1 class="fade-up">
             Correlativas LSI
-            <p class="version" style="text-shadow: var(--title-shadow);">(v1.9)</p>
+            <p class="version fade-up" style="text-shadow: var(--title-shadow);">(v1.9)</p>
         </h1>
 
-        <h2>Selecciona Plan de Estudios</h2>
+        <h2 class="fade-up">Selecciona Plan de Estudios</h2>
 
-        <h3>Si sos ingresante del ciclo lectivo 2025 debes seleccionar el nuevo.</h3>
+        <h3 class="fade-up">Si sos ingresante del ciclo lectivo 2025 debes seleccionar el nuevo.</h3>
         
     </header>
 
@@ -153,7 +153,7 @@
     </main>
 
     <footer>
-        <p>© 2024 Todos los derechos reservados - Diego N. Cabrera</p>
+        <p>© 2025 Todos los derechos reservados - Diego N. Cabrera</p>
         <a style="margin-left: 5px;" href="https://github.com/1Hagi/correlativas_lsi" target="_blank">
             <img class="github_img" src="./img/github.png" alt="Github">
           </a>
