--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
         <div class="unne_logo"></div>
         <h1 class="fade-up">
             Correlativas LSI
-            <p class="version fade-up" style="text-shadow: var(--title-shadow);">(v1.9)</p>
+            <p class="version" style="text-shadow: var(--title-shadow);">(v1.9)</p>
         </h1>
 
         <h2 class="fade-up">Selecciona Plan de Estudios</h2>
@@ -146,8 +146,8 @@
             <a class="plan_estudio" href="./plan_estudio_nuevo.html">
                 <p>Plan de Estudio <u>Nuevo</u></p>
             </a>
-            <a class="plan_estudio" href="./plan_estudio_viejo.html">
-                <p>Plan de Estudio <u>Viejo</u></p>
+            <a class="plan_estudio" href="./plan_estudio_anterior.html">
+                <p>Plan de Estudio <u>Anterior</u></p>
             </a>
         </div>
     </main>
