--- a/plan_estudio_anterior.html
+++ b/plan_estudio_anterior.html
@@ -126,7 +126,7 @@
             <div id='stars3'></div>
         </div>
 
-        <div style="position: absolute; display: flex; flex-wrap: wrap; align-items: center; gap: 5px; top: 10px; left: 10px; width: 100px;">
+        <div style="position: absolute; display: flex; flex-wrap: wrap; align-items: center; gap: 5px; top: 10px; left: 10px; width: 100px; z-index: 1;">
             <div class="show-info" onclick="showInfo()">☰</div>
             <div class="volver-btn" onclick="volver()">
                 <img src="./img/backarrow2.png" style="width: 100%; opacity: 0.6;"/>
@@ -135,14 +135,14 @@
         </div>
         
         <div class="unne_logo"></div>
-        <h1>
+        <h1 class="fade-up">
             Correlativas LSI
             <p class="version" style="text-shadow: var(--title-shadow);">(v1.9)</p>
         </h1>
 
-        <h2>Plan de Estudio Viejo (2009)</h2>
+        <h2 class="fade-up">Plan de Estudio Anterior (2009)</h2>
 
-        <h3>Selecciona materias y actualiza ( Basado en el Plan de Estudio )</h3>
+        <h3 class="fade-up">Selecciona materias y actualiza ( Basado en el Plan de Estudio )</h3>
         
     </header>
 
