--- a/plan_estudio_anterior.html
+++ b/plan_estudio_anterior.html
@@ -21,6 +21,7 @@
 
     <!-- Scripts -->
     <script defer src="./js/buttons.js"></script>
+    <script defer src="js/local_Storage.js"></script>
     <script defer src="./js/Subject.js"></script>
     <script defer src="./js/Extracurricular.js"></script>
     <script defer src="./js/load_subjects_pev.js"></script>
@@ -132,6 +133,9 @@
                 <img src="./img/backarrow2.png" style="width: 100%; opacity: 0.6;"/>
             </div>
             <div id="themeButton" class="toggle-btn" onclick="toggleTheme()"></div>
+            <div class="reset-btn" onclick="reset()">
+                <img src="./img/backarrow.png" style="width: 100%; opacity: 0.6;">
+            </div>
         </div>
         
         <div class="unne_logo"></div>
